More languages support

--- a/src/main/resources/lang/messages_fr_CA.properties
+++ b/src/main/resources/lang/messages_fr_CA.properties
@@ -17,5 +17,8 @@ language=Langues
 laop-title=LAOP : Platforme d'apprentissage
 text-entry=Bacon ipsum dolor amet cupim capicola hamburger eiusmod, boudin proident excepteur bresaola in. Aliqua duis qui eiusmod magna tongue. In spare ribs exercitation consequat turkey venison adipisicing corned beef beef. Dolore ad cow shankle ex leberkas strip steak adipisicing. Meatloaf ground round ad eu. Shankle pork salami frankfurter hamburger kevin. Cupim ribeye pancetta, labore nisi strip steak deserunt aliquip bacon enim.\
 \
-Alcatra buffalo brisket kevin. Salami lorem venison bacon, capicola pork t-bone minim brisket non. Pariatur pork belly pork chop veniam. Short ribs fatback frankfurter dolore enim, consectetur eu adipisicing t-bone ball tip cillum aliqua consequat cupim pig. Bacon commodo eu mollit. Veniam ut kevin sed t-bone, burgdoggen pariatur cupim adipisicing ribeye meatball pancetta turkey corned beef enim.\
-\
+Alcatra buffalo brisket kevin. Salami lorem venison bacon, capicola pork t-bone minim brisket non. Pariatur pork belly pork chop veniam. Short ribs fatback frankfurter dolore enim, consectetur eu adipisicing t-bone ball tip cillum aliqua consequat cupim pig. Bacon commodo eu mollit. Veniam ut kevin sed t-bone, burgdoggen pariatur cupim adipisicing ribeye meatball pancetta turkey corned beef enim.
+algorithm-download=Téléchargeur d'algorithme
+download-progress=Téléchargement en cours
+download-succes=Téléchargement réussi
+download-succes-long=Le téléchargement à été fait. N'oubliez pas de l'évaluer !
