Adding support for evaluation in DL4J

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -22,3 +22,9 @@ algorithm-download=algorithm-download
 download-progress=download-progress
 download-succes=download-succes
 download-succes-long=download-succes-long
+select-language=select-language
+scope-name=scope-name
+scope-name-long=scope-name-long
+error-name=error-name
+no-algorithm-error=no-algorithm-error
+error=error
