--- a/src/main/resources/lang/messages_en_CA.properties
+++ b/src/main/resources/lang/messages_en_CA.properties
@@ -22,3 +22,9 @@ algorithm-download=Algorithm Downloader
 download-progress=Download Progress
 download-succes=Download Successful
 download-succes-long=The algorithm was downloaded successfully. Don't forget to rate it !
+select-language=Select the language :
+scope-name=Scope name
+scope-name-long=Choose a name for the new algorithm
+error-name=Error in the configuration
+no-algorithm-error=No algorithms have been added
+error=Error
