--- a/src/main/resources/lang/messages_fr_CA.properties
+++ b/src/main/resources/lang/messages_fr_CA.properties
@@ -22,3 +22,9 @@ algorithm-download=Téléchargeur d'algorithme
 download-progress=Téléchargement en cours
 download-succes=Téléchargement réussi
 download-succes-long=Le téléchargement à été fait. N'oubliez pas de l'évaluer !
+select-language=Selectionne la langue :
+scope-name=Nom de la porté (scope)
+scope-name-long=Choisit un nom pour le nouveau algorithme
+error-name=Erreur dans la configuration
+no-algorithm-error=Aucun algorithme a été ajouté
+error=Erreur
