Changing the controls

--- a/src/main/resources/lang/messages_en_CA.properties
+++ b/src/main/resources/lang/messages_en_CA.properties
@@ -28,3 +28,4 @@ scope-name-long=Choose a name for the new algorithm
 error-name=Error in the configuration
 no-algorithm-error=No algorithms have been added
 error=Error
+result-title=Result page
