--- a/src/main/resources/lang/messages_fr_CA.properties
+++ b/src/main/resources/lang/messages_fr_CA.properties
@@ -28,3 +28,4 @@ scope-name-long=Choisit un nom pour le nouveau algorithme
 error-name=Erreur dans la configuration
 no-algorithm-error=Aucun algorithme a été ajouté
 error=Erreur
+result-title=Résultats
