--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -28,3 +28,4 @@ scope-name-long=scope-name-long
 error-name=error-name
 no-algorithm-error=no-algorithm-error
 error=error
+result-title=result-title
