intro text, github btn, fix scroll

--- a/src/main/resources/lang/messages_fr_CA.properties
+++ b/src/main/resources/lang/messages_fr_CA.properties
@@ -15,9 +15,7 @@ english=Anglais
 french=Français
 language=Langues
 laop-title=LAOP : Platforme d'apprentissage
-text-entry=Bacon ipsum dolor amet cupim capicola hamburger eiusmod, boudin proident excepteur bresaola in. Aliqua duis qui eiusmod magna tongue. In spare ribs exercitation consequat turkey venison adipisicing corned beef beef. Dolore ad cow shankle ex leberkas strip steak adipisicing. Meatloaf ground round ad eu. Shankle pork salami frankfurter hamburger kevin. Cupim ribeye pancetta, labore nisi strip steak deserunt aliquip bacon enim.\
-\
-Alcatra buffalo brisket kevin. Salami lorem venison bacon, capicola pork t-bone minim brisket non. Pariatur pork belly pork chop veniam. Short ribs fatback frankfurter dolore enim, consectetur eu adipisicing t-bone ball tip cillum aliqua consequat cupim pig. Bacon commodo eu mollit. Veniam ut kevin sed t-bone, burgdoggen pariatur cupim adipisicing ribeye meatball pancetta turkey corned beef enim.
+text-entry=Learning Algorithm Optimization Platform (LAOP) est une plateforme open-source qui a comme but d'aider les chercheurs et les étudiant à développer et à comparer leurs algorithmes d'apprentissage profonds. Avec l'aide de la Learning Algorithm Sharing Plaform (LASP), il est facile pour les chercheurs de partager leurs algorithmes d'apprentissage et d'en trouver des nouveaux pour comparer avec les leurs. Ces plateformes ont été développées dans le cadre du Laboratoire de Recherche Informatique de Maisonneuve (LRIMa). Vous pouvez en apprendre davantage sur notre page GitHub.
 algorithm-download=Téléchargeur d'algorithme
 download-progress=Téléchargement en cours
 download-succes=Téléchargement réussi
@@ -29,3 +27,4 @@ error-name=Erreur dans la configuration
 no-algorithm-error=Aucun algorithme a été ajouté
 error=Erreur
 result-title=Résultats
+view-github=Voir sur GitHub
