--- a/src/main/resources/lang/messages_en_CA.properties
+++ b/src/main/resources/lang/messages_en_CA.properties
@@ -28,3 +28,4 @@ no-algorithm-error=No algorithms have been added
 error=Error
 result-title=Result page
 view-github=View on GitHub
+authors=Authors
