--- a/src/main/resources/lang/messages_fr_CA.properties
+++ b/src/main/resources/lang/messages_fr_CA.properties
@@ -28,3 +28,4 @@ no-algorithm-error=Aucun algorithme a été ajouté
 error=Erreur
 result-title=Résultats
 view-github=Voir sur GitHub
+authors=Auteurs
