--- a/src/main/resources/lang/messages_en_CA.properties
+++ b/src/main/resources/lang/messages_en_CA.properties
@@ -29,3 +29,4 @@ error-name=Error in the configuration
 no-algorithm-error=No algorithms have been added
 error=Error
 result-title=Result page
+next-algorithm=Next algorithm
