--- a/src/main/resources/lang/messages_fr_CA.properties
+++ b/src/main/resources/lang/messages_fr_CA.properties
@@ -29,3 +29,4 @@ error-name=Erreur dans la configuration
 no-algorithm-error=Aucun algorithme a été ajouté
 error=Erreur
 result-title=Résultats
+next-algorithm=Passer à l'algorithme suivant
