--- a/src/main/resources/lang/messages_fr_CA.properties
+++ b/src/main/resources/lang/messages_fr_CA.properties
@@ -30,4 +30,4 @@ result-title=Résultats
 view-github=Voir sur GitHub
 authors=Auteurs
 next-algorithm=Passer à l'algorithme suivant
-chart=Graphique
+chart=Graphique :
